henplus (0.9.1-1) unstable; urgency=low
  
  * do a workaround for a bug in hsqldb (exiting does not work properly)
  * rename the commands 'set' and 'unset' to 'set-var' and 'unset-var'
    because these are probably common commands provided by databases
  * rename session only, if a session with the given name does not already
    exist
  * add password-erase-while-typing hack.
  
 -- Henner Zeller <H.Zeller@acm.org>  Sun, 26 Jan 2003 12:12:12 +0100

henplus (0.9-1) unstable; urgency=low

  * Initial Release as debian package.

 -- Henner Zeller <H.Zeller@acm.org>  Sat, 25 Jan 2003 18:11:14 +0100
